# bookshelf

./: .gitignore  README.md  authors.json  books.json  build_files.sh  db.json  db.sqlite3  description.json  generate_images.py  genres.json  manage.py  pyproject.toml  requirements.txt  upload.py  vercel.json
bookshelf/: asgi.py  settings.py  urls.py  wsgi.py
orders/: admin.py  models.py  urls.py  views.py
orders/migrations/: 0001_initial.py  0002_initial.py  0003_alter_order_user.py  0004_remove_order_user_remove_shippingdetails_user_and_more.py  0005_order_transaction_id_alter_orderitem_quantity.py
scripts/: generate_images.py  upload.py
shop/: admin.py  apps.py  models.py  urls.py  views.py
shop/migrations/: 0001_initial.py  0002_alter_book_old_price.py  0002_remove_author_slug_remove_book_slug_and_more.py  0003_author_slug_book_slug_genre_slug.py  0003_remove_book_old_price.py  0004_alter_author_slug_alter_book_slug_alter_genre_slug.py  0004_book_slug.py  0005_alter_book_price.py  0005_author_portrait_author_slug_genre_slug.py  0006_alter_book_date_created.py  0007_book_image_preview_alter_book_image.py  0008_alter_book_image_alter_book_image_preview.py  0009_alter_book_slug.py  0010_alter_book_image_alter_book_image_preview.py  0011_remove_book_image_preview.py  0012_book_image_preview_alter_book_image.py  0013_alter_book_image_alter_book_image_preview.py  0014_remove_book_image_preview.py  0017_book_on_display.py  (+4 more)
staticfiles/: staticfiles.json
users/: admin.py  forms.py  models.py  signals.py  views.py
utils/: context_processors.py  shop_data.py
(+37 files in other folders)
