[project]
name = "bookshelf"
version = "3.14"
description = "Bookshelf is a simple e-commerce bookshop website."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "cloudinary",
  "django",
  "django-widget-tweaks",
  "markdown",
  "pillow",
  "psycopg2-binary>=2.9.11",
  "python-dotenv",
  "urllib3",
  "whitenoise",
]
